# ReferenceLab

./: .gitignore  CMakeLists.txt  README.md  ReferenceLab_Requisiti_v1.md  ReferenceLab_SRS_v2.md  THIRD_PARTY_NOTICES.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Audio/: AirwindowsMeterModel.cpp  AirwindowsMeterModel.h  AnalysisEngine.cpp  AnalysisEngine.h  CacheManager.cpp  CacheManager.h  ComparisonProcessor.cpp  ComparisonProcessor.h  LoudnessMatcher.cpp  LoudnessMatcher.h  ReferencePlayer.cpp  ReferencePlayer.h  SampleFifo.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h  TransportController.cpp  TransportController.h
Source/Network/: HttpDownloader.cpp  HttpDownloader.h
Source/State/: ComparisonState.cpp  ComparisonState.h
Source/UI/: AirwindowsMeter.cpp  AirwindowsMeter.h  AnalysisDisplay.cpp  AnalysisDisplay.h  AnalysisMeters.cpp  AnalysisMeters.h  EqCurveDisplay.cpp  EqCurveDisplay.h  FrequencyPlot.cpp  FrequencyPlot.h  GuiMagicComponentItem.cpp  GuiMagicComponentItem.h  GuiMagicLookAndFeel.cpp  GuiMagicLookAndFeel.h  GuiMagicTheme.cpp  GuiMagicTheme.h  PanelResizer.h  ReferenceWaveform.cpp  ReferenceWaveform.h  RemoteSourceDialog.cpp  RemoteSourceDialog.h  UiTheme.cpp  UiTheme.h
Tests/: ReferenceLabTests.cpp
docs/: V1_ACCEPTANCE.md  index.html  site.js  styles.css
